@@ -474,7 +474,7 @@ static char *	_recv_msg(slurm_fd new_fd)
 		return NULL;
 	}
 
-	debug("wiki msg recv:%s", buf);
+	debug2("wiki msg recv:%s", buf);
 	return buf;
 }
 
@@ -488,7 +488,7 @@ static size_t	_send_msg(slurm_fd new_fd, char *buf, size_t size)
 	char header[10];
 	size_t data_sent;
 
-	debug("wiki msg send:%s", buf);
+	debug2("wiki msg send:%s", buf);
 
 	(void) sprintf(header, "%08lu\n", (unsigned long) size);
 	if (_write_bytes((int) new_fd, header, 9) != 9) {
